--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
                 <p class="price">17.02</p>
         </div>
     </section>
+    <section id="subscribe">
+        <div class="content">
+            <h3 class="sectionTitle">Subscribe</h3>
+            <p id="deal">Sign up for our special deals!</p>
+            <input type="First Name">
+            <input type="Last Name">
+            <input type="Email">
+        </div>
+    </section>
     </header>
 </body>
 </html>
