--- a/index.html
+++ b/index.html
@@ -78,5 +78,11 @@
         </div>
     </section>
     </header>
+    <footer>
+        <div class="content">
+            <p id="credit">Site Design & Development By Lewis Nozaki</p>
+            <p id="copyright">&copy 2017 Gin Drinkers Association (GDA)"</p>
+        </div>
+    </footer>
 </body>
 </html>
