Additional edits/corrections

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <div class="content">
             <h3 class="sectionTitle">Subscribe</h3>
             <p id="deal">Sign up for our special deals!</p>
-            <input type="First Name">
-            <input type="Last Name">
-            <input type="Email">
+            <input type="First Name" placeholder="First Name">
+            <input type="Last Name" placeholder="Last Name">
+            <input type="Email" placeholder="Email">
         </div>
     </section>
     <section id="visit">
