--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Best Pizza Ever</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 <body>
     <header id="Intro">
         <div class="content">
-            <h1 id="name">Pizzaria La DevLeague</h1>
-            <h2 id="taglines">Functional Pizza for All!</h2>
-            <img src="assets/pizzaMan.jpeg" alt="Logo">
+            <!-- <h1 id="name">Pizzaria La DevLeague</h1> -->
+            <!-- <h2 id="taglines">Functional Pizza for All!</h2> -->
+            <img id= "photo" src="assets/logo2.JPG" alt="logo">
+             <h1 id="taglines">Functional<br/> Pizza<br/>  for All!</h1>
+            <!-- <img id= "photo2" src="/assets/Slogan.JPG" alt="logo"> -->
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
             <nav id="topMenu">
-                <li class="guide"><a href="#today">Today's Special</a></li>
-                <li class="guide"><a href="#menu">Menu</a></li>
-                <li class="guide"><a href="#subscribe">Subscribe</a></li>
-                <li class="guide"><a href="#visit">Visit</a></li>
+                <h3 class="guide"><a href="#today">Today's Special</a></h3>
+                <h3 class="guide"><a href="#menu">Menu</a></h3>
+                <h3 class="guide"><a href="#subscribe">Subscribe</a></h3>
+                <h3 class="guide"><a href="#visit">Visit</a></h3>
             </nav>
         </div>
     <section id="today">
@@ -30,27 +40,27 @@
             <h3 class="sectionTitle">Menu</h3>
             <div class="pizza">
                 <p class="pizzaName">Object of My Desire</p>
-                <p class="description">A programmers delight, this classic has string cheese, an array of BBQ meats and 1 special sauce.</p>
+                <p class="description">A programmers delight, this classic has string cheese, <br />an array of BBQ meats and 1 special sauce.</p>
                 <p class="price">19.99</p>
             </div>
             <div class="pizza">
                 <p class="pizzaNAme">Four Loop</p>
-                <p class="description">Spin your wheel with this quattro cheese mix doused in garlic and truffle oil. Loop there it is!</p>
+                <p class="description">Spin your wheel with this quattro cheese mix doused <br/> in garlic and truffle oil. Loop there it is!</p>
                 <p class="price">44.44</p>
             </div>
             <div class="pizza">
                 <p class="pizzaNAme">Conditional Love</p>
-                <p class="description">This island favorite doesn't give you a chance to say no. Korean bulgogi meat, kim chee, mozzarella cheese and onions always returns true! Boo~Ya!</p>
+                <p class="description">This island favorite doesn't give you a chance to say no. Korean bulgogi meat,<br/> kim chee, mozzarella cheese and onions always returns true! Boo~Ya!</p>
                 <p class="price">22.14</p>
             </div>
             <div class="pizza">
                 <p class="pizzaNAme">The DOM</p>
-                <p class="description">This dynamic blend of Duck, Olives and Mango will change your original thought of what a pizza should be. The only thing constant is change for this bad boy!</p>
+                <p class="description">This dynamic blend of Duck, Olives and Mango will change <br />your original thought of what a pizza should be. <br/>The only thing constant is change for this bad boy!</p>
                 <p class="price">16.99</p>
             </div>
             <div class="pizza">
                 <p class="pizzaNAme">Conjunction Function</p>
-                <p class="description">Create your own pie by passing in handpicked fresh ingredients. Invoke your appetite and creativity! Mamma Mia return back to glory!</p>
+                <p class="description">Create your own pie by passing in handpicked fresh ingredients. <br />Invoke your appetite and creativity! <br />Mamma Mia return back to glory!</p>
                 <p class="price">17.02</p>
         </div>
     </section>
@@ -58,30 +68,31 @@
         <div class="content">
             <h3 class="sectionTitle">Subscribe</h3>
             <p id="deal">Sign up for our special deals!</p>
-            <input type="First Name" placeholder="First Name">
-            <input type="Last Name" placeholder="Last Name">
-            <input type="Email" placeholder="Email">
+            <input type="First Name" placeholder="First Name"><br />
+            <input type="Last Name" placeholder="Last Name"><br />
+            <input type="Email" placeholder="Email"><br />
+            <button>Submit</button>
         </div>
     </section>
     <section id="visit">
         <div class="content">
             <h3 class="sectionTitle">Visit</h3>
-            <ul id="addy">
-                <li id="street">2800 Woodlan Dr. Honolulu, HI 96822</li>
-                <li id="map">
+            <h4 id="addy">
+                <h5 id="street">2800 Woodlan Dr. Honolulu, HI 96822</h5>
+                <h5 id="map">
                     <a href="https://www.google.com/maps?ll=21.223782,-157.899628&z=13&t=m&hl=en&gl=US&mapclient=embed&cid=15585431400080676543" target="_blank">View Map</a>
-                </li>
-                <li id="hours">Monday - Saturday</li>
-                <li id="hours">12pm -12am</li>
-                <li id="hours">Coding on Sundays</li>
-            </ul>
+                </h5>
+                <h5 id="hours">Monday - Saturday</h5>
+                <h5 id="hours">12pm -12am</h5>
+                <h5 id="hours">Coding on Sundays</h5>
+            </h4>
         </div>
     </section>
     </header>
     <footer>
         <div class="content">
-            <p id="credit">Site Design & Development By Lewis Nozaki</p>
-            <p id="copyright">&copy 2017 Gin Drinkers Association (GDA)"</p>
+            <p id="credit">Site Design & Development By <br />Lewis Nozaki</p>
+            <p id="copyright">&copy 2019 Cool Kids Club (CKC)"</p>
         </div>
     </footer>
 </body>
